2003-03-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (Iconify):
	initialise icon position to +0+0 if there is neiter a picture nor a
	title

2003-02-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/gnome.c (GNOME_SetClientList):
	fixed compile problem

	* fvwm/move_resize.c (get_outline_rects):
	(draw_move_resize_grid):
	initial drawing and final undrawing of wire frame no longer toggles the
	pixel in the top left corner of the screen

2003-02-13  olicha  <olivier.chapuis@free.fr>

	* fvwm/gnome.c (GNOME_SetClientList):
	Applied David Fries patch which fixes a possible crash with more
	than 256 windows

2003-02-09  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1: * Update %space/%tab description in menu.
	Give the XorValue range.

2003-02-08  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1: backslash lines beginning with a quote.
	Fully document the emulate command.

2003-02-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (calculate_item_sizes):
	backed out patch from 30-Jan-2003

2003-01-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (_calculate_item_sizes):
	function renamed due to global name space collision with IRIX 6.5

2003-01-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	* configure.in:
	set version to 2.4.16

	* NEWS:
	* fvwm/fvwm2.1:
	updated for 2.4.15

2003-01-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleConfigureRequest):
	fixed size calculations of icons

2003-01-16  Dan Espen  <dane@mk.telcordia.com>

	* NEWS: Update news.
	* fvwm/builtins.c (CMD_Exec): Close stdin so the exec'd process knows
	its not interactive.

2002-12-24  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/add_window.c (GetWindowSizeHints):  Change hint warning message
	so we won't get so many application bugs report to fvwm-workers.

2002-12-03  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	recognize and use $PERL if any

2002-11-29  Dan Espen  <dane@mk.telcordia.com>

	* NEWS, configure.in: