@@ -1,3 +1,8 @@
+2003-03-16  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmIconMan/fvwm.c (win_in_viewport):
+	ignore icon geometry if there is neither a title nor a picture.
+
 2003-03-15  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmCommand/FvwmCommand.c (main):
