@@ -1,3 +1,8 @@
+2003-03-16  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/icons.c (Iconify):
+	backed out previous patch
+
 2003-03-12  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/icons.c (Iconify):
